Add rest of code login, linux command line, etc

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
-flask
 requests
+httpx
+aiohttp
+python-dotenv
+quart==0.19.6
+Flask-Cors
+gunicorn==20.1.0
+uvicorn==0.18.2
+quart_cors
+pymssql==2.2.5
+cachetools
+fastapi
+pyodbc
+aioodbc
+cachetools
+paramiko
+ldap3
